Aaron: Fixed text and paralax effect, made about us text full width on mobile.

--- a/content/UWBRaaga.css
+++ b/content/UWBRaaga.css
@@ -578,14 +578,6 @@ video {
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
-.absolute {
-  position: absolute;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -802,15 +794,6 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-25 {
-  --tw-bg-opacity: 0.25;
-}
-
 .bg-\[url\(\'Assets\/SampleBackground_New\.png\'\)\] {
   background-image: url('Assets/SampleBackground_New.png');
 }
@@ -935,10 +918,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.opacity-25 {
-  opacity: 0.25;
-}
-
 .mix-blend-screen {
   mix-blend-mode: screen;
 }
@@ -966,27 +945,6 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.blur-sm {
-  --tw-blur: blur(4px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.backdrop-brightness-0 {
-  --tw-backdrop-brightness: brightness(0);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-filter {
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
 .hover\:bg-slate-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
@@ -1011,6 +969,16 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+@media not all and (min-width: 1024px) {
+  .max-lg\:bg-fixed {
+    background-attachment: fixed;
+  }
+
+  .max-lg\:bg-scroll {
+    background-attachment: scroll;
+  }
+}
+
 @media not all and (min-width: 768px) {
   .max-md\:w-0 {
     width: 0px;
@@ -1028,18 +996,44 @@ video {
     width: 100%;
   }
 
+  .max-md\:bg-green-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  }
+
+  .max-md\:bg-fixed {
+    background-attachment: fixed;
+  }
+
   .max-md\:text-\[7rem\] {
     font-size: 7rem;
+  }
+
+  .max-md\:text-\[0\.5rem\] {
+    font-size: 0.5rem;
+  }
+
+  .max-md\:text-\[1rem\] {
+    font-size: 1rem;
+  }
+
+  .max-md\:text-\[2rem\] {
+    font-size: 2rem;
   }
 }
 
 @media not all and (min-width: 640px) {
+  .max-sm\:bg-green-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  }
+
   .max-sm\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
   }
 
-  .max-sm\:text-\[1rem\] {
-    font-size: 1rem;
+  .max-sm\:text-\[0\.5rem\] {
+    font-size: 0.5rem;
   }
 }
